--- a/admin-frontend/src/index.css
+++ b/admin-frontend/src/index.css
@@ -22,10 +22,16 @@ a:hover {
   color: #535bf2;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+}
+
 body {
   margin: 0;
   display: flex;
   place-items: center;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
