--- a/admin-frontend/src/components/PostCard.css
+++ b/admin-frontend/src/components/PostCard.css
@@ -2,7 +2,8 @@
     border-radius: 10px;
     margin: 20px;
     min-height: 100px;
-    border:  1px solid rgb(239, 235, 235);;
+    border: 1px solid rgb(239, 235, 235);
+    ;
 }
 
 .postcard-header {
@@ -12,29 +13,49 @@
     padding: 10px 20px;
     font-size: 1rem;
     font-weight: bolder;
+
     .tag {
         font-size: 0.75;
         font-weight: lighter;
         margin: 0px 20px;
-        padding: 0px 20px;
+        padding: 4px 20px;
         border-radius: 5px;
     }
+
     .draft {
         color: white;
         background: #e955ac;
         margin: 0px 10px;
     }
+
+    .published {
+        margin: 0px 10px;
+        color: white;
+        background: #1e7be4;
+    }
+}
+
+.postcard-title {
+    display: flex;
+justify-content: center;}
+
+.date {
+    font-weight: lighter;
+    font-size: .75rem;
+    color: grey;
 }
 
 .header-tags {
     display: flex;
     align-items: center;
 
-    div,button {
+    div,
+    button {
         max-height: 35px;
     }
+
     button {
-        padding: 2px 20px;
+        padding: 4px 20px;
         border-radius: 5px;
         background: rgb(227, 224, 224);
     }
@@ -44,4 +65,3 @@
     padding: 20px;
     font-size: 0.9rem;
 }
-
