--- a/admin-frontend/src/components/PostCard.css
+++ b/admin-frontend/src/components/PostCard.css
@@ -3,7 +3,6 @@
     margin: 20px;
     min-height: 100px;
     border: 1px solid rgb(239, 235, 235);
-    ;
 }
 
 .postcard-header {
@@ -58,6 +57,17 @@ justify-content: center;}
         padding: 4px 20px;
         border-radius: 5px;
         background: rgb(227, 224, 224);
+    }
+
+    img {
+        width: 20px;
+        display: flex;
+        transition: 100ms ease;
+        margin: 0px 5px;
+    }
+    img:hover {
+        transform: scale(1.05);
+        cursor: pointer;
     }
 }
 
