--- a/admin-frontend/src/components/PostCard.css
+++ b/admin-frontend/src/components/PostCard.css
@@ -32,16 +32,30 @@
         color: white;
         background: #1e7be4;
     }
+
+    .title {
+        padding: 0;
+        margin: 0;
+    }
 }
 
 .postcard-title {
     display: flex;
-justify-content: center;}
+    justify-content: center;
+}
 
 .date {
     font-weight: lighter;
     font-size: .75rem;
     color: grey;
+    padding: 5px 0;
+    display: flex;
+    align-items: center;
+    margin: 0px 20px;
+    p {
+        margin: 0;
+        padding: 0;
+    }
 }
 
 .header-tags {
@@ -65,6 +79,7 @@ justify-content: center;}
         transition: 100ms ease;
         margin: 0px 5px;
     }
+
     img:hover {
         transform: scale(1.05);
         cursor: pointer;
