--- a/admin-frontend/src/App.css
+++ b/admin-frontend/src/App.css
@@ -1,35 +1,23 @@
+.page {
+  display: flex;
+  min-width: 500px;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+.content-container {
+  width: 100%;
+  padding: 1rem;
+  input {
+    height: 30px;
+    border-radius: 8px;
+    padding: 0px 25px;
+    min-width: 500px;
+    border: 1px solid rgb(226, 223, 223);
   }
 }
 
@@ -39,4 +27,36 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.sidebar {
+  box-sizing: border-box;
+  min-width: 20%;
+  padding: 20px;
+  padding-top: 0;
+  border-right: 1px solid rgb(240, 234, 234);
+  ul {
+    list-style-type: none;
+    text-align: left;
+  }
+  li {
+    padding: 10px 20px;
+    border-radius: 10px;
+  }
+  li:hover {
+    background: rgb(206, 202, 202);
+  }
+  a {
+    color: black;
+  }
+}
+
+.create-btn {
+  background: rgb(25, 152, 211);
+  color: white;
+  font-weight: bolder;
+  border-radius: 10px;
+  li:hover {
+    background: rgb(25, 152, 211);
+   }
 }
