Uplifted UI elements

--- a/admin-frontend/src/components/Grid.css
+++ b/admin-frontend/src/components/Grid.css
@@ -1,5 +1,38 @@
 .scrollable-div {
-    overflow: auto;
-    height: 90vh;
-    scrollbar-color: rgb(240, 240, 240) white;
+    overflow: overlay;
+    padding: 0;
+    height: 80vh;
+    width: 1280px;
+    scrollbar-color: #e7e1e1 rgb(242, 242, 246);
+  }
+
+  .filters {
+    margin: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    width: 100%;
+    box-sizing: content-box;
+    button {
+        padding: 0;
+        padding-bottom: 8px;
+        font-size: 16px;
+        font-weight: 400;
+        margin-right: 48px;
+        text-align: center;
+        background: none;
+        border-radius: 0;
+        border: 2px solid transparent; /* Keeps layout stable */
+    }
+  }
+
+  button.create {
+    background: rgb(77, 140, 234);
+    padding: 10px;
+    color: white;
+    border-radius: 5px;
+  }
+
+  button.active {
+    border-bottom: 4px solid rgb(199, 191, 191)
   }
