--- a/admin-frontend/src/App.css
+++ b/admin-frontend/src/App.css
@@ -1,24 +1,23 @@
 .page {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   min-width: 500px;
+  background: rgb(242, 242, 246);
 }
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  text-align: center;
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .content-container {
-  width: 100%;
-  padding: 1rem;
-  input {
-    height: 30px;
-    border-radius: 8px;
-    padding: 0px 25px;
-    min-width: 500px;
-    border: 1px solid rgb(226, 223, 223);
-  }
+  width: 100vw;
+  min-height: 95%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .card {
@@ -29,39 +28,35 @@
   color: #888;
 }
 
-.sidebar {
-  box-sizing: border-box;
-  min-width: 20%;
-  padding: 20px;
-  padding-top: 0;
-  border-right: 1px solid rgb(240, 234, 234);
-  ul {
-    list-style-type: none;
-    text-align: left;
-  }
-  li {
-    padding: 10px 20px;
-    border-radius: 10px;
-  }
-  li:hover {
-    background: rgb(206, 202, 202);
-  }
-  a {
-    color: black;
-  }
-}
-
 .create-btn {
   background: rgb(25, 152, 211);
   color: white;
   font-weight: bolder;
   border-radius: 10px;
+
   li:hover {
     background: rgb(25, 152, 211);
-   }
+  }
 }
 
 .filters {
   display: flex;
-  flex-direction: column;
+}
+
+.navbar {
+  width: 100%;
+  height: 72px;
+  background: rgb(72, 88, 199);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  input {
+    border-radius: 16px;
+    height: 36px;
+    width: 560px;
+    outline: none;
+    border: none;
+    padding: 0 10px;
+  }
 }
