--- a/admin-frontend/src/components/PostCard.css
+++ b/admin-frontend/src/components/PostCard.css
@@ -3,6 +3,8 @@
     margin: 20px;
     min-height: 100px;
     border: 1px solid rgb(239, 235, 235);
+    background: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 
 .postcard-header {
@@ -21,7 +23,7 @@
         align-items: center;
         padding: 0 15px;
         font-weight: lighter;
-        border-radius: 3px;
+        border-radius: 5px;
     }
 
     .draft {
@@ -90,7 +92,6 @@
         cursor: pointer;
     }
 }
-
 .postcard-content {
     padding: 20px;
     font-size: 0.9rem;
