--- a/admin-frontend/src/index.css
+++ b/admin-frontend/src/index.css
@@ -1,6 +1,9 @@
 html {
   margin: 0;
   padding: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgb(242, 242, 246);
 }
 
 :root {
@@ -34,10 +37,16 @@ form {
   flex-direction: column;
 }
 
+head {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   padding: 0;
   margin: 0;
-  min-width: 100vw;
+  height: 100vh;
+  background:rgb(242, 242, 246);
 }
 
 h1 {
@@ -56,13 +65,6 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -76,3 +78,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
