--- a/admin-frontend/src/components/PostCard.css
+++ b/admin-frontend/src/components/PostCard.css
@@ -7,6 +7,11 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 
+.postcard:hover {
+    border: 1px solid blue;
+    cursor: pointer;
+}
+
 .postcard-header {
     display: flex;
     flex-direction: column;
@@ -96,6 +101,18 @@
     padding: 20px;
     font-size: 0.9rem;
     text-align: left;
+}
+
+.comments {
+    padding: 5px 20px;
+    display: flex;
+    align-items: center;
+    opacity: 0.5;
+    font-size: 14px;
+}
+
+.comments img {
+    width: 15px;
 }
 
 .header-row1 {
