--- a/admin-frontend/src/App.css
+++ b/admin-frontend/src/App.css
@@ -2,18 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-width: 500px;
   background: rgb(242, 242, 246);
 }
 
-#root {
-  max-width: 100%;
-  margin: 0;
-  padding: 0;
-}
 
 .content-container {
-  width: 100vw;
+  width: 100%;
   min-height: 95%;
   display: flex;
   flex-direction: column;
