--- a/admin-frontend/src/components/Grid.css
+++ b/admin-frontend/src/components/Grid.css
@@ -1,6 +1,7 @@
 .container {
   width: min(90%, 800px);
   min-width: 600px;
+  box-sizing: border-box;
 }
 
 .scrollable-div {
@@ -9,7 +10,6 @@
   height: 80vh;
   scrollbar-color: #e7e1e1 rgb(242, 242, 246);
   text-align: center;
-
   .message {
     width: 100%;
     height: 25%;
