--- a/admin-frontend/src/components/Nav.css
+++ b/admin-frontend/src/components/Nav.css
@@ -3,5 +3,6 @@
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
-    padding: 10px 20px;
+    padding: 15px 50px;
+    margin: 0;
 }
