--- a/admin-frontend/src/index.css
+++ b/admin-frontend/src/index.css
@@ -1,8 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   margin: 0;
   padding: 0;
   height: 100vh;
   background: rgb(242, 242, 246);
+  box-sizing: border-box;
 }
 
 :root {
