--- a/admin-frontend/src/components/Nav.css
+++ b/admin-frontend/src/components/Nav.css
@@ -5,4 +5,24 @@
     box-sizing: border-box;
     padding: 15px 50px;
     margin: 0;
+    background: white;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 36px;
+}
+
+.navbar a {
+    color: rgb(53, 53, 53);
+}
+
+.login-link {
+    color: blue;
+    text-decoration: underline;
+    :hover {
+        color: darkblue;
+    }
 }
