--- a/admin-frontend/src/components/ProfilePic.css
+++ b/admin-frontend/src/components/ProfilePic.css
@@ -34,6 +34,9 @@
     width: 0;
     height: 0;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    p {
+        font-size: 16px;
+    }
 }
 
 @keyframes scaleIn {
