--- a/admin-frontend/src/components/Nav.css
+++ b/admin-frontend/src/components/Nav.css
@@ -19,10 +19,11 @@ h1 {
     color: rgb(53, 53, 53);
 }
 
-.login-link {
+.account-link {
     color: blue;
     text-decoration: underline;
     :hover {
         color: darkblue;
     }
+    margin-left: 10px;
 }
