--- a/user-frontend/src/App.css
+++ b/user-frontend/src/App.css
@@ -7,6 +7,8 @@
   text-align: center;
   background: rgb(23, 23, 63);
   color: white;
+  display: flex;
+  flex-direction: column;
 }
 
 
@@ -52,13 +54,15 @@ h1 {
 
 .body-content {
   width: 100%;
-  height: 600px;
   display: flex;
   justify-content: space-between;
+  overflow: auto;
+  scrollbar-color: white rgb(23, 23, 63);
 }
 
 .container-left {
   display: flex;
+  flex-direction: column;
 }
 
 .container-right {
