--- a/user-frontend/src/components/Search.css
+++ b/user-frontend/src/components/Search.css
@@ -5,13 +5,15 @@
 input {
     box-sizing: border;
     height: 35px;
-    border-radius: 0 5px;
     font-size: 18px;
-    padding: 0px 10px;
     background: var(--background-colour);
     outline: none;
     border: none;
     border-bottom: 1px solid white;
-    border-left: 1px solid white;
     color: white;
+}
+
+input::placeholder {
+    color: white;
+    opacity: .75;
 }
